Update text and fix bugs so it works on iPhone

--- a/css/design.css
+++ b/css/design.css
@@ -123,8 +123,8 @@ hr {
 .about,
 .contact {
   height: 60vh;
-  max-height: 58em;
-  min-height: 32em;
+  max-height: 58rem;
+  min-height: 32rem;
   color: #fff;
   background-position: center center;
   background-repeat: no-repeat;
@@ -269,10 +269,6 @@ hr {
   -webkit-transition: .3s ease-in-out;
        -o-transition: .3s ease-in-out;
           transition: .3s ease-in-out;
-}
-
-.card:hover {
-  border-radius: 1.75rem;
 }
 
 .card img {
